--- a/index.css
+++ b/index.css
@@ -1,110 +1,253 @@
 @charset "UTF-8";
+body {
+  margin: 0px;
+}
+.menu {
+  width: 100%;
+    height: 415px;
+    display: flex;
+    justify-content: center;
+}
+#foto {
+  width: 357px;
+  float: right;
+  padding-right: 51px;
+}
+#sobre {
+  max-width: 48%;
+  font-family: Montserrat, sans-serif;
+  font-size: 17px;
+  padding: 62px;
+}
 
-html{
-    background-color: #e4fde1;
+#sobre h2 {
+  color: red;
 }
-h1{
-    background-color: #a9e7b2;
-    margin: 0;
-    color: #47806F;
-    text-align: center;
-    padding-bottom: 3px;
-    padding-top: 3px;
-    font-family: 'Roboto', sans-serif;
+/*border-bottom: 1px solid #e5e5e5; */
+.cabecalho {
+  text-align: center;
+  font-family: Montserrat, sans-serif;
+  font-weight: 900;
+  font-size: 24px;
 }
-h2{
-    text-align: center;
-    color: white;
-    
+.butao {
+  background-color: #e5e5e5;
+  border: 1px solid #e5e5e5;
+  font-family: Montserrat, sans-serif;
+  font-size: 14px;
+  padding: 17px;
+  box-shadow: 1px -9px 16px 0px black;
+  text-align: initial;
 }
-p{
-    color: white;
+.cabecalho button {
+  background-color: #e5e5e5;
+  border-radius: 5px;
+  width: 129px;
+  height: 38px;
+  border-color: red;
+  font-family: Montserrat, sans-serif;
+  color: red;
+  font-weight: 900;
+  cursor: pointer;
 }
-img{
-    width: 300px;
-    padding-left: 530px;
-    padding-top: 20px;
+.cabecalho button:hover {
+  background-color: red;
+  color: white;
 }
-.sobre{
-    display: flex;
-    gap: 42px;
-    border-radius: 50px;
-    background-color: #139A43;
-    box-shadow: 0px 4px 10px #000000;
+.menuseta {
+  display: flex;
 }
-#cargo{
-    padding-top: 16px;
+#nome {
+  width: 50%;
+  float: right;
 }
-#sobre2{
-    justify-content: center;
-    width: 58%;
+#linha {
+  width: 50%;
+  height: 21px;
+  float: left;
+  position: relative;
+  top: 53px;
+  left: -38px;
+  background-color: red;
+  border-radius: 158px;
 }
-.container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 91px;
-    padding: 20px;
-    
-}
-.card{
-    width: 300px;
-    height: 53px;
-    border-radius: 10px;
-    background-color: #139A43;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-    color: #FFFFFF;
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-    padding: 10px;
-    box-shadow: 0px 4px 10px #000000;
-}
-.menu1{
-    background-color: #139A43;
-    background-size: cover;
-    font-size: 24px;
-    padding-left: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin: auto;
-    
-}
-.menu2{
-    padding: 10px;
-    display: flex;
-    gap:20px;
-    color: white;
-}
-#a1, #a2 {
-    color: white;
-    text-decoration: none;
-    font-size: 20px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-    background-color: #139A43;
-    box-shadow: 0px 4px 10px #000000;
 
+.contatos1 {
+  height: 314px;
+  background-color: #e5e5e5;
+  position: relative;
+  box-shadow: 0px -15px 5px 0px black;
 }
-button{
-   background-color: #A9E7B2;
-   border-radius: 10px;
-   width: 164px;
-    height: 34px;
-    font-family: monospace;
-    font-size: 11px;
+.contatos1 h2 {
+  color: red;
+    font-family: Montserrat, sans-serif;
     font-weight: 900;
-    box-shadow: 6px 8px 5px 0px #000000;
-    cursor: pointer;
+    text-align: center;
+    font-size: xx-large;
+    position: relative;
+    top: -17px;
+    padding-top: 17px;
+    background-color: #e5e5e5;
 }
-button:hover{
-    color: rgb(255, 255, 255);
-    background-color: #47806F;
+#barra{
+  width: 25%;
+  height: 14px;
+  background-color: red;
+  position: relative;
+  top: -37px;
+  border-radius: 10px;
+  left: 38%;
+}
+.contatos2 {
+  display: flex;
+  justify-content: center;
+  height: 290px;
+  background-color: #e5e5e5;
+  box-shadow: 0px -9px 18px black;
+  margin-bottom: 50px;
+}
+.contatos2 h2 {
+  color: red;
+  font-family: Montserrat, sans-serif;
+  font-weight: 900;
+  text-align: center;
+  font-size: xx-large;
+  position: relative;
+  top: 13px;
+}
+#card1,
+#card2,
+#card3,
+#card4,
+#card5 {
+  width: 264px;
+  height: 200px;
+  display: inline-block;
+  text-align: center;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 5px 1px 1px red;
+}
+.cards1 {
+  position: relative;
+  display: flex;
+  padding: 5px;
+  font-family: Montserrat, sans-serif;
+  gap: 118px;
+  justify-content: center;
+}
+.cards1 img {
+  position: relative;
+  top: 39px;
+}
+.cards2 {
+  position: relative;
+  display: flex;
+  padding: 20px;
+  font-family: Montserrat, sans-serif;
+  gap: 118px;
+}
+.cards2 img {
+  position: relative;
+  top: 39px;
+}
+.cards2 button {
+  background-color: white;
+  color: red;
+  border-radius: 4px;
+  border-color: red;
+  font-family: Montserrat, sans-serif;
+  cursor: pointer;
+}
+.cards2 button:hover {
+  background-color: red;
+  color: white;
+}
+h3 {
+  position: relative;
+  top: 39px;
+}
+.skills{
+  display: flex;
+  justify-content: center;
+  gap: 180px;
+  height: 294px;
+}
+li{
+  padding: 8px;
+  font-weight: 900;
+}
+li::marker{
+  color: red;
+}
+.skills-card1{
+  width: 264px;
+  height: 200px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 10px;
+  font-family: Montserrat, sans-serif;
+  
+}
+.skills-card1 h2{
+  color: red;
+  font-weight: 900;
+  text-align: center;
+  font-size: xx-large;
+  position: relative;
+}
+#barra-skills{
+  width: 16px;
+    height: 306px;
+    background-color: red;
+    position: relative;
     border-radius: 10px;
 }
-body{
-    margin: 0px
+.skills-card2{
+  width: 264px;
+  height: 200px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 10px;
+  font-family: Montserrat, sans-serif;
+  
+}
+.skills-card2 h2{
+  color: red;
+  font-weight: 900;
+  text-align: center;
+  font-size: xx-large;
+  position: relative;
+  
+}
+.fixado{
+  display: flex;
+  position: fixed;
+  flex-direction: column;
+  bottom: -12px;
+  left: -22px;
+  align-items: center;
+}
+.fixado1 {
+  background-color: red;
+    border-radius: 15px;
+    width: 10px;
+    height: 107px;
+}
+.fixado-nome{
+  color: red;
+    font-family: Montserrat, sans-serif;
+    transform: rotate(270deg);
+    position: relative;
+    bottom: 43px;
+    font-weight: 900;
+}
+.rodape{
+  display: flex;
+  justify-content: center;
+  height: 50px;
+  background-color: #e5e5e5;
+  gap: 746px;
+  box-shadow: -2px 8px 16px 0px black;
+  position: relative;
 }
