--- a/index.css
+++ b/index.css
@@ -358,7 +358,7 @@ li::marker {
     left: 1px;
   }
   .skills{
-    width: 385px;
+    width: 100%;
     height: 647px;
     position: relative;
     top: 121px;
@@ -389,6 +389,7 @@ li::marker {
     left: 10%;
     width: 349px;
     height: 23px;
+    align-self: center;
     
   }
   .contatos1{
@@ -417,6 +418,7 @@ li::marker {
     top: -11px;
     flex-direction: column;
     align-items: center;
+    left: -7px;
   }
   .fixado{
     position: relative;
