alteração de posicionamento das divs skills e contatos v4

--- a/index.css
+++ b/index.css
@@ -386,7 +386,7 @@ li::marker {
     height: 220px;
   }
   #barra-skills{
-    width: 349px;
+    width: 92%;
     height: 23px;
     align-self: center;
   }
